{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 31,
  "lineage": "ce46e919-e2f6-d340-8ef0-5c611aae2a31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "IP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ae74828e6b2d524d",
            "domain": "vpc",
            "id": "eipalloc-01002e1be03cac177",
            "network_interface": "eni-0c9d82b70ba120a1f",
            "private_dns": "ip-172-31-18-199.us-east-2.compute.internal",
            "private_ip": "172.31.18.199",
            "public_dns": "ec2-3-17-90-20.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.90.20",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "WebServerLBc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:loadbalancer/WebServerLBc",
            "availability_zones": [
              "us-east-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "WebServerLBc-872606442.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 5,
                "target": "HTTP:80/index.html",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "WebServerLBc",
            "idle_timeout": 300,
            "instances": [
              "i-02f50d634e7aad91d",
              "i-049b39f5a99c69b0b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "WebServerLBc",
            "security_groups": [
              "sg-0609767ee66aba8cc"
            ],
            "source_security_group": "047434116843/WebServer",
            "source_security_group_id": "sg-0609767ee66aba8cc",
            "subnets": [
              "subnet-d8d4f9a2"
            ],
            "tags": {
              "Name": "WebServerLBc"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.WebServer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:047434116843:instance/i-0272361f875b3f2d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0272361f875b3f2d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oleg",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0821210e3b432b4",
            "private_dns": "ip-172-31-18-126.us-east-2.compute.internal",
            "private_ip": "172.31.18.126",
            "public_dns": "ec2-3-17-146-64.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.146.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01a6506c5f2e6b1f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "SSH security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d8d4f9a2",
            "tags": {
              "Name": "Ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b0acb28a0696c304"
            ]
          },
          "dependencies": [
            "aws_security_group.SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:047434116843:instance/i-0fccd1774d725f691",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fccd1774d725f691",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oleg",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2929c09d2eca4bd",
            "private_dns": "ip-172-31-18-182.us-east-2.compute.internal",
            "private_ip": "172.31.18.182",
            "public_dns": "ec2-3-15-154-101.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.154.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f3dacc0eeba2ae20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Jenkins 8080 22 security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d8d4f9a2",
            "tags": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d62f70ad4ef7ffc"
            ]
          },
          "dependencies": [
            "aws_security_group.Jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:047434116843:instance/i-00b2b547b7dd4bbc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b2b547b7dd4bbc5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oleg",
            "monitoring": false,
            "primary_network_interface_id": "eni-02e9df8b6d7fc80a6",
            "private_dns": "ip-172-31-18-223.us-east-2.compute.internal",
            "private_ip": "172.31.18.223",
            "public_dns": "ec2-52-15-130-235.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.130.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f062cc1e7a657cff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "SSH security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d8d4f9a2",
            "tags": {
              "Name": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b0acb28a0696c304"
            ]
          },
          "dependencies": [
            "aws_security_group.SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "WebServerLB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:loadbalancer/net/WebServerLB/c715df1e37a6534c",
            "arn_suffix": "net/WebServerLB/c715df1e37a6534c",
            "dns_name": "WebServerLB-c715df1e37a6534c.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:047434116843:loadbalancer/net/WebServerLB/c715df1e37a6534c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "WebServerLB",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-01002e1be03cac177",
                "subnet_id": "subnet-d8d4f9a2"
              }
            ],
            "subnets": [
              "subnet-d8d4f9a2"
            ],
            "vpc_id": "vpc-7de92616",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_eip.IP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LBlistener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:listener/net/WebServerLB/c715df1e37a6534c/6e99c4c3418d9918",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:targetgroup/TargetGroup/df281ce0a5e01616",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:047434116843:listener/net/WebServerLB/c715df1e37a6534c/6e99c4c3418d9918",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:loadbalancer/net/WebServerLB/c715df1e37a6534c",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_eip.IP",
            "aws_lb.WebServerLB",
            "aws_lb_target_group.TargetGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TargetGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:047434116843:targetgroup/TargetGroup/df281ce0a5e01616",
            "arn_suffix": "targetgroup/TargetGroup/df281ce0a5e01616",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:047434116843:targetgroup/TargetGroup/df281ce0a5e01616",
            "lambda_multi_value_headers_enabled": false,
            "name": "TargetGroup",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-7de92616"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047434116843:security-group/sg-08d62f70ad4ef7ffc",
            "description": "Security group for jenkins master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d62f70ad4ef7ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins 8080 22 security group",
            "name_prefix": null,
            "owner_id": "047434116843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-7de92616"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047434116843:security-group/sg-0b0acb28a0696c304",
            "description": "Security group using ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0acb28a0696c304",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH security group",
            "name_prefix": null,
            "owner_id": "047434116843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-7de92616"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047434116843:security-group/sg-0609767ee66aba8cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0609767ee66aba8cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer",
            "name_prefix": null,
            "owner_id": "047434116843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-7de92616"
          }
        }
      ]
    }
  ]
}